# ternodbi

./: .gitignore  README.md  pyproject.toml  run_mcp.sh
.github/workflows/: coverage.yml
benchmarks/: benchmark_pagination.py
docs/: api.html  api.md  architecture.html  architecture.md  django-integration.md  index.html  mcp-guide.html  mcp-guide.md  security.html  security.md  setup.html  setup.md
server/: env-sample.sh  manage.py
server/dbi_server/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/dbi_layer/: __init__.py  client.py  decorators.py  middleware.py
src/dbi_layer/connectors/: bigquery.py  databricks.py  mysql.py  oracle.py  postgres.py  sqlite.py
src/dbi_layer/django_app/: admin.py  apps.py  auth.py  conf.py  models.py  signals.py  urls.py  views.py
src/dbi_layer/mcp/: __init__.py  __main__.py  admin_server.py  query_server.py  server.py
src/dbi_layer/services/: __init__.py  access.py  auth.py  query.py  schema_utils.py  shield.py  validation.py
src/terno_dbi/: __init__.py  cli.py  client.py  decorators.py  middleware.py
src/terno_dbi/agents/: __init__.py  agent.py  agent_usage_demo.py  interactive_cli.py  llm_interface.py  mcp_config.py
src/terno_dbi/connectors/: __init__.py  base.py  bigquery.py  databricks.py  factory.py  mysql.py  oracle.py  postgres.py  snowflake.py
src/terno_dbi/core/: __init__.py  admin.py  apps.py  auth.py  conf.py  models.py  receivers.py  signals.py  urls.py  views.py
src/terno_dbi/llm/: __init__.py  anthropic.py  base.py  fake.py  gemini.py  ollama.py  openai.py  terno_llm.py
src/terno_dbi/mcp/: __init__.py  __main__.py  admin_server.py  query_server.py  server.py
src/terno_dbi/server/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/terno_dbi/services/: __init__.py  access.py  auth.py  db_guide_service.py  dbi_guide_service.py  memory.py  query.py  resolver.py  schema_utils.py  shield.py  validation.py
src/terno_dbi/vector_store/: utils.py
tests/: conftest.py
tests/integration/: test_pagination_integration.py
tests/integration/connectors/: test_integration.py  test_stress.py
tests/unit/: test_cli.py  test_client.py  test_init.py  test_pagination.py
tests/unit/agents/: test_agent_edge_cases.py  test_agent_usage_demo.py  test_chain_of_thought.py  test_cli_demos.py  test_interactive_cli.py  test_llm_interface.py  test_mcp_config.py
tests/unit/connectors/: test_base.py  test_bigquery.py  test_connectors.py  test_connectors_extended.py  test_databricks.py  test_mysql.py  test_oracle.py  test_postgres.py  test_snowflake.py
tests/unit/core/: __init__.py  test_admin.py  test_admin_urls.py  test_conf.py  test_decorators.py  test_generate_db_guide_command.py  test_generate_dbi_guide_command.py  test_issue_token.py  test_middleware.py  test_migrations.py  test_models.py  test_receivers.py  test_role_resolution_security.py  test_signals.py  test_token_access.py  test_token_scopes.py  test_urls.py  test_views.py
tests/unit/mcp/: test_admin_server.py  test_init.py  test_main.py  test_mcp_servers.py  test_query_server.py
tests/unit/services/: test_access_service.py  test_auth_service.py  test_client_sdk.py  test_client_sdk_edge_cases.py  test_connector_close_extra_sites.py  test_db_guide_service.py  test_dbi_guide_service.py  test_memory.py  test_pagination_auto_order.py  test_query_coverage.py  test_query_service.py  test_resolver.py  test_schema_sync.py  (+8 more)
(+100 files in other folders)
